flapivor/tests/m1/hopix/parser/bad/88-case-1.hopix
val style_evaluation =
  case hair_color {
  | Red    => Good
  | Yellow => Good
  | Brown  => Good
  | _      => Good
